# motion-base

./: .coverage.runnervmg397c.pid4278.X9Bzv0Ex.HUMXp8rQ1lkh  .dockerignore  .gitignore  .gitlab-ci.yml  Dockerfile  README.md  back.Dockerfile  crawler.Dockerfile  front.Dockerfile  front.bun.Dockerfile  mb.py  mb_runner.py  pylintrc  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/: .codecov.yml  dependabot.yml
.github/workflows/: delete.yml  gitlab.yml  joss.yml  master.yml  scan.yml  sync.yml  update.yml
doc/: Architecture.md  Search.md
docker/: .env  back.Dockerfile  docker-compose-production-nginx.yaml  docker-compose-production.yaml  docker-compose.yaml  front.Dockerfile  nginx.conf  nginx.conf.sh
docker/k8s/: config-mb.yaml  deployment-mb-back.yaml  deployment-mb-front.yaml  deployment-mb-storage.yaml  deployment-mb-worker.yaml  ingress-mb.yaml  mb-back-service.yaml  mb-back.yaml  mb-config.yaml  mb-front.yaml  mb-ingress.yaml  mb-storage-service.yaml  mb-storage.yaml  mb-worker.yaml  service-mb-front.yaml  service-mb-storage.yaml
docs/: Architecture.md  Search.md  client.ipynb  paper.bib  paper.md
electron/: .gitignore  index.js  package.json  pnpm-workspace.yaml
extra-hooks/: hook-celery.py  hook-taskiq.py
gui/: .gitignore  index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
gui-ark/: .gitignore  index.html  package.json  tsconfig.json
gui-ark/src/: API.tsx  Main.tsx  index.css  index.tsx
gui-ark/src/assets/: client.md
gui/public/: brief.md  client.md
gui/src/: API.tsx  About.tsx  App.tsx  Jackpot.tsx  Map.tsx  Process.tsx  Query.tsx  QuerySetting.tsx  ResponseSpectrum.tsx  Search.tsx  Server.tsx  Utility.tsx  index.css  index.tsx  ui.ts
gui/src/assets/: brief.md  client.md
gui_backup/: package-lock.json  package.json  vite.config.ts
gui_backup/src/: API.tsx  App.tsx  ResponseSpectrum.tsx  Utility.tsx  index.css  index.tsx
mb/: .env  __init__.py  client.py
mb/app/: jp.py  main.py  nz.py  process.py  response.py  universal.py  utility.py
mb/record/: jp.py  nz.py  parser.py  record.py  response_spectrum.py  utility.py
mb/utility/: __init__.py  config.py
scripts/: example.sh  git-commit.sh  gui.sh  pip.sh  pyinstaller.ps1  pyinstaller.sh
src/crawler/: nied_crawler.py  nzsm_crawler.py
src/mb/: __init__.py  celery.py  client.py  taskiq.py
src/mb/app/: __init__.py  dispatcher.py  jp.py  jp_async.py  jp_sync.py  main.py  nz.py  nz_async.py  nz_sync.py  process.py  response.py  universal.py  user.py  utility.py
src/mb/record/: __init__.py  async_parser.py  async_record.py  base_parser.py  parser.py  record.py  response_spectrum.py  sync_parser.py  sync_record.py  utility.py
src/mb/utility/: __init__.py  config.py  elastic.py  env.py  files.py  taskiq.py
tests/: __init__.py  conftest.py  locustfile.py
tests/app/: test_jp.py  test_main.py  test_nz.py  test_user.py
tests/data/: 20110222_015029_MQZ.V2A  20190904_070311_WAKS_20.V1A  D00129A02.V1A  D5054A01.V2A  D9644D08.V2A  I06465B10.V2A  SZO0039901271027.NS
tests/record/: test_jp.py  test_jp_async.py  test_jp_sync.py  test_nz.py  test_nz_async.py  test_nz_sync.py  test_utility.py
vue-project/: package.json  pnpm-lock.yaml
vue-project/src/: App.vue
