[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
dynamic = ["version"]
name = "motion-base"
description = "a strong motion database"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
keywords = ["earthquake"]
authors = [{ name = "Theodore Chang", email = "tlcfem@gmail.com" }]
maintainers = [{ name = "Theodore Chang", email = "tlcfem@gmail.com" }]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3 :: Only",
]
dependencies = [
    "bcrypt",
    "beanie",
    "celery",
    "elasticsearch[async]",
    "email-validator",
    "fastapi-slim",
    "httpx",
    "joserfc",
    "mongoengine",
    "numba",
    "Pint",
    "pyinstrument",
    "python-dotenv",
    "python-multipart",
    "requests",
    "scipy",
    "structlog",
    "uvicorn",
]

[project.optional-dependencies]
dev = [
    "locust",
    "pytest-asyncio",
    "pytest-celery",
    "pytest-cov",
    "pytest-xdist",
    "ruff",
]
client = [
    "httpx-auth",
    "matplotlib",
    "rich",
]

[project.urls]
"Homepage" = "https://github.com/TLCFEM/motion-base"
"Bug Reports" = "https://github.com/TLCFEM/motion-base/issuess"
"Source" = "https://github.com/TLCFEM/motion-base"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
filterwarnings = [
    "ignore::DeprecationWarning:",
]

[tool.pyright]
venvPath = "."
venv = ".venv"
